--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "installCommand": "corepack enable && pnpm install",
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "api/index.ts",
       "use": "@vercel/node"
     },
     {
@@ -17,11 +17,11 @@
   "rewrites": [
     {
       "source": "/api/trpc/(.*)",
-      "destination": "api/index.js"
+      "destination": "api/index.ts"
     },
     {
       "source": "/api/(.*)",
-      "destination": "api/index.js"
+      "destination": "api/index.ts"
     },
     {
       "source": "/(.*)",
