Add esbuild compilation step for Vercel serverless function and simplify build configuration
Added esbuild command to build script to compile api/index.ts to api/index.js for Vercel deployment. Updated vercel.json to reference compiled JavaScript file instead of TypeScript source and removed includeFiles configuration since bundled output includes all dependencies.

--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,8 @@
   "installCommand": "corepack enable && pnpm install",
   "builds": [
     {
-      "src": "api/index.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["server/**", "drizzle/**", "shared/**"]
-      }
+      "src": "api/index.js",
+      "use": "@vercel/node"
     },
     {
       "src": "package.json",
@@ -20,11 +17,11 @@
   "rewrites": [
     {
       "source": "/api/trpc/(.*)",
-      "destination": "api/index.ts"
+      "destination": "api/index.js"
     },
     {
       "source": "/api/(.*)",
-      "destination": "api/index.ts"
+      "destination": "api/index.js"
     },
     {
       "source": "/(.*)",
